# lifo-ui-demo

./: .dockerignore  .env.example  .env.local.backup  .env.local.example  .env.local.template  .env.production.example  .env.staging.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  2025-07-31-csv-performance-optimization.md  20251119130000_seed_categories.sql  20251119130100_seed_category_weights.sql  20251119130200_seed_service_role_user.sql  ARCHITECTURE_MIGRATION_GUIDE.md  AUTHENTICATION_AUDIT.md  AUTHENTICATION_SECURITY_AUDIT_REPORT.md  BACKEND_REFACTORING_COMPLETE.md  BULK_SCORING_FIX_GUIDE.md  BULK_SCORING_FIX_REPORT.md  CLAUDE.md  CLEANUP-PROMPT-FOR-NEXT-CHAT.md  COMPLETE_FIXES_OCT13_FINAL.md  COMPLETE_SESSION_SUMMARY_OCT13.md  COMPREHENSIVE_API_TEST_REPORT.md  CORRECTED-001_add_complete_lifo_schema.sql  CORS_CONFIGURATION_GUIDE.md  DATABASE_OPTIMIZATION_ANALYSIS.md  DATABASE_OPTIMIZATION_SUMMARY.md  DEMO_PLAN.md  DIGITALOCEAN_DEPLOYMENT_RUNBOOK.md  DIGITALOCEAN_SETUP_GUIDE.md  DOCUMENTATION.md  DONATION_FIRST_REFERENCE.md  Dockerfile  ENVIRONMENT_SECURITY_GUIDE.md  ENVIRONMENT_VARIABLES_COMPLETE.md  ENV_SETUP.md  (+68 more)
lifo-ai-core/: .env.example  Makefile  __init__.py  main.py  pyproject.toml  requirements.txt  setup.py
lifo-ai-core/config/: settings.py
lifo-ai-core/database/: operations.ts
lifo-ai-core/etl/: processor.py  unified_csv_processor.py
lifo-ai-core/lifo_ai_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lifo-ai-core/scoring/: engine.py
lifo-ai-core/scripts/: setup.py
lifo-ai-core/src/lifo_ai_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lifo-ai-core/utils/: logger.py
lifo-api/: .env.deployment.example  README.md  pyproject.toml  requirements.txt  test_docs.html
lifo-api/app/: __init__.py  main.py
lifo-api/app/auth/: dependencies.py  deployment_auth.py  secure_dependencies.py  secure_jwt.py  supabase_client.py  supabase_jwt.py
lifo-api/app/core/: __init__.py  auth.py  config.py  donation_engine.py  donation_kpi_tracker.py  eu_food_safety.py  scoring.py
lifo-api/app/database/: __init__.py  connection.py  donation_models.py  global_models.py  models.py  read_only_operations.py
lifo-api/app/middleware/: rate_limiting.py  security_headers.py
lifo-api/app/models/: __init__.py  analytics.py  base.py  inventory.py  scan_models.py  stores.py
lifo-api/app/services/: __init__.py  realtime_service.py  secure_csv_processor.py
lifo-api/app/utils/: __init__.py  exceptions.py  logging.py  mvp_exceptions.py  performance.py
lifo-api/database/migrations/: 002_create_read_only_views.sql
lifo-api/tests/: __init__.py  conftest.py  test_mvp_endpoints.py
lifo-api/tests/integration/: __init__.py  test_api_endpoints.py
lifo-api/tests/security/: test_auth_edge_cases.py  test_cors_network_vulnerabilities.py  test_csv_vulnerabilities.py  test_database_edge_cases.py  test_remaining_vulnerabilities.py  test_scoring_algorithm_edge_cases.py
lifo-api/tests/unit/: __init__.py  test_auth.py  test_auth_module.py  test_csv_processor.py  test_health.py  test_jwt_secret.py
lifo_ai_core/: .env.example  __init__.py  pyproject.toml  requirements.txt  setup.py
lifo_ai_core/config/: settings.py
lifo_ai_core/database/: __init__.py  operations.py  operations.ts
lifo_ai_core/etl/: processor.py  unified_csv_processor.py
lifo_ai_core/scripts/: dev-setup.sh  setup.py
lifo_ai_core/utils/: logger.py
lifo_api/: .env.deployment.example  .env.example  .env.test  API_REFERENCE.md  AUTOMATED_SCORING_SYSTEM.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  NETWORK_PATH_ANALYSIS.md  OPTIMIZATION_IMPLEMENTATION_GUIDE.md  PERFORMANCE_ANALYSIS_REPORT.md  Procfile  README.md  SCORING_PERFORMANCE_OPTIMIZATION_PLAN.md  TESTING.md  TESTING_AND_VALIDATION_GUIDE.md  WSL2_NETWORKING_LIMITATIONS.md  bulk_scoring_test_results.json  debug_health_endpoint.py  diagnose_production_network.py  generate_safe_csv.py  generate_test_jwt.py  main.py  monitoring_config.py  mypy.ini  pyproject.toml  pytest.ini  quick_dataset_sampler.py  requirements-test.txt  requirements.txt  ruff.toml  run_tests.py  test_bulk_scoring_fix.py.skip  test_category_integration.py  test_database_connection.py.skip  test_db_connection.py.skip  test_ipv6_connection.py.skip  test_jwt_employee.txt  test_jwt_manager.txt  test_jwt_owner.txt  (+9 more)
lifo_api/.do/: app.yaml
lifo_api/.github/workflows/: deploy-to-do.yml
lifo_api/app/: __init__.py  main.py
lifo_api/app/api/: dependencies.py
lifo_api/app/auth/: __init__.py  dependencies.py  deployment_auth.py  error_responses.py  monitoring.py  secure_dependencies.py  secure_jwt.py  supabase_api_key_auth.py  supabase_client.py  supabase_jwt.py
lifo_api/app/core/: __init__.py  auth.py  automated_scoring.py  config.py  database.py  database_production.py  donation_engine.py  donation_kpi_tracker.py  environment.py  eu_food_safety.py  high_performance_scoring_persistence.py  network_latency_killer.py  ocr_config.py  opencv_fallback.py  rate_limiting.py  scoring.py  (+4 more)
lifo_api/dataset_tools/: README.md  __init__.py  config.py  example_usage.py  main.py  requirements.txt  test_installation.py
lifo_api/docs/: DONATION_WORKFLOW_DOCUMENTATION.md  ENHANCED_OCR_ARCHITECTURE.md  TESTING.md  algorithm_optimization_analysis.md  performance_optimization_report.md
lifo_api/scripts/: dev-setup.sh  migrate_recommendations.py
lifo_api/test_csv_data/: CSV_COLUMN_MAPPING_DEMO.md  CSV_ETL_TEST_METHODOLOGY.md  QUICK_START_GUIDE.md  demo_flexible_columns.csv  demo_variation_1_camelcase.csv  demo_variation_2_spaces.csv  demo_variation_3_mixed.csv  demo_variation_4_no_spaces.csv  demo_variation_5_aliases.csv  demo_variation_6_mixed_case.csv  minimal_required_fields.csv  performance_test.csv  run_csv_tests.py  security_test.csv  urgent_expiry_test.csv  valid_inventory_test.csv  validation_errors_test.csv
lifo_api/test_data/: comprehensive_ocr_validation.py  edge_case_dataset.json  ocr_test_dataset.json  ocr_validation_results.json  validate_test_dataset.py
lifo_api/tests/: conftest.py  test_mvp_endpoints.py
(+1366 files in other folders)
