# LIFO AI Engine - Modern Python Project Configuration
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lifo-ai-engine"
version = "1.0.0"
description = "Intelligent Food Waste Management Platform with AI-powered inventory optimization"
authors = [
    {name = "LIFO.AI Team", email = "team@lifo.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["food-waste", "inventory", "ai", "fastapi", "retail"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Dependencies are managed in requirements.txt for better deployment compatibility
dependencies = []

[project.urls]
"Homepage" = "https://github.com/lifo-ai/lifo-app"
"Documentation" = "https://github.com/lifo-ai/lifo-app/tree/main/docs"
"Repository" = "https://github.com/lifo-ai/lifo-app"
"Bug Tracker" = "https://github.com/lifo-ai/lifo-app/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lifo_api*", "lifo_ai_core*"]
exclude = ["tests*", "docs*"]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [
    ".venv",
    "migrations",
    "__pycache__",
    "*.pyc",
    ".git",
    ".pytest_cache",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
]

ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "S101",  # use of assert (common in tests)
    "T201",  # print statements (allowed in CLI tools)
    "N818",  # exception name should be named with an Error suffix
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused
"tests/**/*.py" = ["S101", "S106", "S108"]  # assert, hardcoded passwords in tests
"lifo_ai_core/scripts/**/*.py" = ["T201"]  # print statements in scripts

[tool.ruff.lint.isort]
known-first-party = ["lifo_api", "lifo_ai_core"]
known-third-party = ["fastapi", "pydantic", "sqlalchemy", "pandas", "numpy"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
show_error_codes = true
mypy_path = "lifo_api:lifo_ai_core"
packages = ["lifo_api", "lifo_ai_core"]

[[tool.mypy.overrides]]
module = [
    "google.cloud.*",
    "supabase.*",
    "pandas.*",
    "numpy.*",
    "PIL.*",
    "chardet.*",
    "magic.*",
    "redis.*",
    "slowapi.*",
    "loguru.*",
    "typer.*",
    "rich.*",
    "openpyxl.*",
    "xlrd.*",
    "factory_boy.*",
    "sklearn.*",
    "joblib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q", 
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--durations=10",
]
testpaths = [
    "tests",
    "lifo_api/tests",
    "lifo_ai_core/tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "security: Security tests",
    "performance: Performance tests",
    "mobile: Mobile-specific tests",
    "slow: Slow running tests",
    "requires_db: Tests that require database",
    "requires_external: Tests that require external services",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning", 
    "error::UserWarning",
]

[tool.coverage.run]
source = ["lifo_api", "lifo_ai_core"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]