[project]
name = "lifo-ai-core"
version = "0.1.0"
description = "Lifo AI component"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "easyocr>=1.7.2",
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pytesseract>=0.3.13",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.0",
    "regex>=2024.11.6",
]
