# LIFO AI Core - Workspace Dependencies
# This is part of a monorepo workspace, not a standalone package

[project]
requires-python = ">=3.9"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "chardet>=5.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "python-magic>=0.4.27",
    "pytest>=8.4.1",
    "mypy>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "factory-boy>=3.3.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

# Ruff configuration
[tool.ruff]
target-version = "py39"
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E203", "E501"]
exclude = [".venv", "__pycache__", "*.egg-info"]

[tool.ruff.isort]
force-single-line = true

# MyPy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"