[project]
name = "lifo-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=23.2.1",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "apscheduler>=3.11.0",
    "asyncpg>=0.29.0",
    "boto3>=1.28.0",
    "chardet>=5.0.0",
    "factory-boy>=3.3.0",
    "fastapi>=0.104.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-vision>=3.4.0",
    "gunicorn>=21.2.0",
    "httpx>=0.25.0",
    "joblib>=1.3.0",
    "loguru>=0.7.0",
    "mypy>=1.5.0",
    "numpy>=1.24.0",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-exporter-jaeger>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "opentelemetry-instrumentation-redis>=0.41b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
    "opentelemetry-sdk>=1.20.0",
    "pandas>=2.0.0",
    "pandas-stubs>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=10.0.0",
    "prometheus-client>=0.18.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "psutil>=5.9.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyjwt>=2.8.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-magic>=0.4.0",
    "python-multipart>=0.0.6",
    "redis>=5.0.0",
    "rich>=13.0.0",
    "ruff>=0.1.0",
    "scikit-learn>=1.3.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.0",
    "structlog>=23.2.0",
    "supabase>=2.17.0",
    "typer>=0.9.0",
    "types-psutil>=7.0.0",
    "types-pygments>=2.0.0",
    "types-pyyaml>=6.0.0",
    "types-requests>=2.32.0",
    "uvicorn[standard]>=0.24.0",
    "xlrd>=2.0.0",
]
